src/test/deca/context/valid/created/decl-bool-var-noinit.deca
//Description :
// Declaration d'une variable boolean sans initialisation
//
// Resultats :
//


{
    boolean x;
}
