src/test/deca/context/invalid/created/bad_type-return2.deca
//Description :
// Test d'un mauvais type de return
//
// Resultats :
// Erreur


class A{
 protected boolean a;

 int getA(){
  return a;
 }
}

{}
